<resources>
    <string name="app_name">PhotoWorld</string>
    <string name="app_welcome">Welcome to</string>

    <!-- BUTTONS -->
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="cancel">CANCEL</string>
    <string name="upload">UPLOAD</string>
    <string name="save">SAVE</string>
    <string name="log_out">LOG OUT</string>

    <!-- FIELDS -->
    <string name="radio_author">author</string>
    <string name="radio_user">user</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="email">email</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="edit_age">age</string>
    <string name="address">address</string>

    <!-- CATEGORIES -->
    <string-array name="categories">
        <item>Vintage</item>
        <item>Sport</item>
        <item>Portrait</item>
        <item>People</item>
        <item>Pattern</item>
        <item>Nature</item>
        <item>Flower</item>
        <item>Food</item>
        <item>Macro</item>
        <item>Abstract</item>
        <item>Animal</item>
        <item>Black&amp;White</item>
    </string-array>

    <string name="vintage">Vintage</string>
    <string name="sport">Sport</string>
    <string name="portrait">Portrait</string>
    <string name="people">People</string>
    <string name="pattern">Pattern</string>
    <string name="nature">Nature</string>
    <string name="flower">Flower</string>
    <string name="food">Food</string>
    <string name="macro">Macro</string>
    <string name="abstraction">Abstract</string>
    <string name="animal">Animal</string>
    <string name="b_and_w"><![CDATA[Black&White]]></string>

    <!-- ERROR MESSAGES -->
    <string name="empty_name">Name must not be empty or less than 2 symbols!</string>
    <string name="empty_username">Username must not be empty!</string>
    <string name="invalid_email">Email is not valid!</string>
    <string name="invalid_password">Must contain at least 8 chars, 1 letter and 1 number!</string>
    <string name="password_mismatch">Passwords do not match!</string>
    <string name="existing_username">Username already exists!</string>
    <string name="existing_email">Email already exists!</string>
    <string name="wrong_password">Invalid password!</string>
    <string name="wrong_username">Invalid username!</string>
    <string name="invalid_age">Age is not a valid number!</string>
    <string name="invalid_address">Address too short!</string>

    <!-- TITLES -->
    <string name="edit_profile">Edit profile</string>

    <!-- MENU ITEMS -->
    <string name="item_upload">Upload</string>
    <string name="item_log_out">Log out</string>
    <string name="item_my_gallery">My gallery</string>
    <string name="item_profile">Profile</string>
    <string name="item_save">Save</string>
    <string name="item_share_via">Share via…</string>
    <string name="item_set_as">Set as…</string>
    <string name="item_edit">Edit</string>
    <string name="logout_message">Are you sure you want ot log out?</string>
    <string name="upload_photo">Upload photo</string>
</resources>
