<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img2"
    android:gravity="center"
    android:paddingTop="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textColor="@color/colorWhitish"
        android:textSize="55sp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorWhitish"
            android:textColorHint="@color/colorWhitish"
            android:hint="@string/name"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="3dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorWhitish"
            android:textColorHint="@color/colorWhitish"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="3dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorWhitish"
            android:textColorHint="@color/colorWhitish"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="3dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorWhitish"
            android:textColorHint="@color/colorWhitish"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="3dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:textColorHint="@color/colorWhitish"
            android:textColor="@color/colorWhitish"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="3dp"
            android:textSize="20sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/colorWhitish"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp">

            <RadioGroup
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radio_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_author"
                    android:textColor="@color/colorWhitish"
                    android:buttonTint="@color/colorWhitish"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_user"
                    android:textColor="@color/colorWhitish"
                    android:buttonTint="@color/colorWhitish"/>

            </RadioGroup>

            <Button
                android:id="@+id/register_button"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>