<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.photoworld.MainActivity"
    android:background="@drawable/background_flowers"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_welcome"
        android:fontFamily="cursive"
        android:textColor="@color/colorWhitish"
        android:textSize="40sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="cursive"
        android:textColor="@color/colorWhitish"
        android:textSize="55sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorTransparent"/>

        <Button
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:text="@string/log_in"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorTransparent"/>

    </LinearLayout>
</LinearLayout>
