<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textColor="@color/colorWhitish"
        android:textSize="55sp"/>
    
    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorWhitish"
        android:textColorHint="@color/colorWhitish"
        android:hint="@string/username"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="3dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorWhitish"
        android:textColorHint="@color/colorWhitish"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="3dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp" />
        <!-- TO-DO: align button to the right -->

</LinearLayout>