<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorImageBackground"
    tools:context="com.example.user.photoworld.LogoutDialogActivity">

    <TextView
        android:id="@+id/logout_message"
        android:text="@string/logout_message"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorWhitish"
        android:layout_weight="3"
        android:gravity="center"
        android:padding="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_dialog_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:padding="3dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/colorWhitish"
            android:background="@color/colorDarkBackground"/>

        <Button
            android:id="@+id/logout_dialog_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:padding="3dp"
            android:text="@string/log_out"
            android:textSize="18sp"
            android:textColor="@color/colorWhitish"
            android:background="@color/colorDarkBackground"/>

    </LinearLayout>

</LinearLayout>
