<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.user.photoworld.GalleryActivity">

    <include
        layout="@layout/app_bar"
        android:id="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/abstraction_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/abstraction" />

                <ImageView
                    android:id="@+id/animal_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/animal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/abstraction_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/abstraction"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/animal_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/animal"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/black_and_white_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/b_white" />

                <ImageView
                    android:id="@+id/flower_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/flower" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/black_and_white_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b_and_w"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/flower_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/flower"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/food_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/food" />

                <ImageView
                    android:id="@+id/macro_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/macro" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/food_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/food"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/macro_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/macro"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nature_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/nature" />

                <ImageView
                    android:id="@+id/pattern_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/pattern" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/nature_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nature"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/pattern_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pattern"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/people_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/people" />

                <ImageView
                    android:id="@+id/portrait_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/portrait" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/people_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/people"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />


                <TextView
                    android:id="@+id/portrait_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/portrait"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/sport_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/sport" />

                <ImageView
                    android:id="@+id/vintage_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/vintage" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/sport_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sport"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/vintage_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vintage"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhitish"
                    android:textSize="15dp" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
